# vbdb-fetch

./: .gitignore  build_database.py  insert_ncaaw_results.py  pyproject.toml  update_ncaam_daily.py  vbdb.db
data/: conference_short_mapping_m.csv  conference_short_mapping_w.csv  ncaa_schools_imgs.csv
players/: fetch_lovb_players.py  fetch_ncaam_players.py  fetch_ncaaw_players.py  fetch_pvf_players.py
schedule/: fetch_lovb_schedule.py  fetch_ncaam_schedule.py  fetch_ncaaw_schedule.py  fetch_pvf_schedule.py
src/vbdb_fetch/: __init__.py  db.py  schema.py
teams/: fetch_lovb_teams.py  fetch_ncaam_teams.py  fetch_ncaaw_teams.py  fetch_pvf_teams.py
