[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vbdb-fetch"
version = "0.1.0"
description = "Package to gather data and build a sqlite database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "lxml>=5.3.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "ruff>=0.11.2",
    "seleniumbase>=4.35.7",
]
